# ICU_Mortality_Prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
tests/: conftest.py
